Fixed many performance leaks and fixed VSyncs.